syntax = "proto3";

option go_package = "github.com/cluttrdev/gitlab-exporter/grpc/exporterpb";

package gitlabexporter.proto.exporter;

import "gitlabexporter/proto/models/pipeline.proto";
import "gitlabexporter/proto/models/job.proto";
import "gitlabexporter/proto/models/section.proto";
import "gitlabexporter/proto/models/testreport.proto";
import "gitlabexporter/proto/models/metric.proto";
import "gitlabexporter/proto/models/trace.proto";

service GitLabExporter {
    rpc RecordPipelines(stream gitlabexporter.proto.models.Pipeline) returns (RecordSummary) {}
    
    rpc RecordJobs(stream gitlabexporter.proto.models.Job) returns (RecordSummary) {}

    rpc RecordSections(stream gitlabexporter.proto.models.Section) returns (RecordSummary) {}

    rpc RecordBridges(stream gitlabexporter.proto.models.Bridge) returns (RecordSummary) {}

    rpc RecordTestReports(stream gitlabexporter.proto.models.TestReport) returns (RecordSummary) {}

    rpc RecordTestSuites(stream gitlabexporter.proto.models.TestSuite) returns (RecordSummary) {}

    rpc RecordTestCases(stream gitlabexporter.proto.models.TestCase) returns (RecordSummary) {}

    rpc RecordMetrics(stream gitlabexporter.proto.models.Metric) returns (RecordSummary) {}

    rpc RecordTraces(stream gitlabexporter.proto.models.Trace) returns (RecordSummary) {}
}

message RecordSummary {
    int32 recorded_count = 1;
}
